.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Pay_Summary_YTD__c.object
<CustomObject>
    <description>Payroll
Records cumulative pay for tax year to date</description>
    <fields>
        <fullName>xcdhcm__Above_UEL_pay1_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Earnings above UEL for 2016/2017 YTD.</description>
        <label>Above UEL pay1 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Above_UEL_pay2_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Earnings above UEL for 2016/2017 YTD.</description>
        <label>Above UEL pay2 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Above_UEL_pay_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Earnings above UEL for 2016/2017 YTD.</description>
        <label>Above UEL pay YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Benefits_Taxed_via_Payroll_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Benefits Taxed via Payroll YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__C1ANICtermination_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>C1ANICtermination-YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Director_s_pro_rata_NI_able_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Director&apos;s pro-rata NI able YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Effective_date__c</fullName>
        <label>Effective date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_NI1_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Employee NI1 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_NI2_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Employee NI2 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_NI_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Calculate employee NI yearlly</description>
        <label>Employee NI0 - YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_NI_due_YTD__c</fullName>
        <formula>xcdhcm__Employee_NI_YTD__c + xcdhcm__Employee_NI1_YTD__c + xcdhcm__Employee_NI2_YTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee NI due YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_NI_paid1_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Employee NI paid1 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_NI_paid2_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Employee NI paid2 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_NI_paid_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Employee NI paid0 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_NI_sum_YTD__c</fullName>
        <formula>xcdhcm__Employee_NI_paid_YTD__c  +  xcdhcm__Employee_NI_paid1_YTD__c  +  xcdhcm__Employee_NI_paid2_YTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee NI-YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipName>Pay_Summary_YTDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_leaving_date__c</fullName>
        <formula>xcdhcm__Employee__r.xcdhcm__Leaving_Date__c</formula>
        <label>Employee leaving date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_pension_contributions_NPA_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Employee pension contributions NPA YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_pension_contributions_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Employee pension contributions - YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_pension_not_NPA_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Employee pension not NPA YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employer_NI1_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Employer NI1 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employer_NI2_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Employer NI2 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employer_NI_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Employer NI0-YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employer_NI_sum_YTD__c</fullName>
        <formula>xcdhcm__Employer_NI_YTD__c + xcdhcm__Employer_NI1_YTD__c + xcdhcm__Employer_NI2_YTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer NI-YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employer_pension_contributions_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Employer pension contributions - YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__LEL_pay1_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>LEL pay1 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__LEL_pay2_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>LEL pay2 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__LEL_pay_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>LEL pay YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__LEL_to_PT_pay1_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>LEL to PT pay1 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__LEL_to_PT_pay2_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>LEL to PT pay2 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__LEL_to_PT_pay_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>LEL to PT pay YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leaver_before_data_retention_period__c</fullName>
        <formula>If( 
not(isblank( xcdhcm__Employee__r.xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c)), 
xcdhcm__Employee_leaving_date__c &lt; xcdhcm__Employee__r.xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c, 
xcdhcm__Employee_leaving_date__c &lt; xcdhcm__Employee__r.xcdhcm__Company__r.xcdhcm__HMRC_data_retention_threshold__c  
)</formula>
        <label>Leaver before data retention period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leaving_date_on_P45__c</fullName>
        <label>Leaving date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__NI_able_pay0_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>NI-able pay0 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__NI_able_pay1_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>NI-able pay1 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__NI_able_pay2_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>NI-able pay2 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__NI_outstanding_carry_forward__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Manual input field for adjustment NI outstanding.</description>
        <label>NI outstanding carry forward</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__P45_tax_paid_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>P45 tax paid YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__P45_taxable_pay_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>P45 taxable pay YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__P60EmployeeId__c</fullName>
        <label>P60EmployeeId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__P60email__c</fullName>
        <label>P60email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>xcdhcm__P6_9_tax_paid_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>P6/9 tax paid YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__P6_9_taxable_pay_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>P6/9 taxable pay YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__PT_to_ST_pay1_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>PT to ST pay1 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__PT_to_ST_pay2_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>PT to ST pay2 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__PT_to_ST_pay_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>PT to ST pay YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__PT_to_UAP_pay1_YTD__c</fullName>
        <formula>NULLVALUE(xcdhcm__PT_to_ST_pay1_YTD__c, 0.00) + NULLVALUE(xcdhcm__ST_to_UAP_pay1_YTD__c, 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT to UAP pay1 YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__PT_to_UAP_pay2_YTD__c</fullName>
        <formula>NULLVALUE(xcdhcm__PT_to_ST_pay2_YTD__c, 0.00) + NULLVALUE(xcdhcm__ST_to_UAP_pay2_YTD__c, 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT to UAP pay2 YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__PT_to_UAP_pay_YTD__c</fullName>
        <formula>NULLVALUE(xcdhcm__PT_to_ST_pay_YTD__c, 0.00) + NULLVALUE(xcdhcm__ST_to_UAP_pay_YTD__c, 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT to UAP pay YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__PT_to_UEL_pay1_YTD__c</fullName>
        <formula>NULLVALUE(xcdhcm__PT_to_ST_pay1_YTD__c , 0.00) + NULLVALUE(xcdhcm__ST_to_UEL_pay1_YTD__c, 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT to UEL pay1 YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__PT_to_UEL_pay2_YTD__c</fullName>
        <formula>NULLVALUE(xcdhcm__PT_to_ST_pay2_YTD__c , 0.00) + NULLVALUE(xcdhcm__ST_to_UEL_pay2_YTD__c, 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT to UEL pay2 YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__PT_to_UEL_pay_YTD__c</fullName>
        <formula>NULLVALUE(xcdhcm__PT_to_ST_pay_YTD__c, 0.00) + NULLVALUE(xcdhcm__ST_to_UEL_pay_YTD__c, 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT to UEL pay YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Payroll_setup_tax_paid_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payroll setup tax paid YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Payroll_setup_taxable_pay_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payroll setup taxable pay YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Payroll_start_date__c</fullName>
        <label>Payroll start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Postgraduate_loan_YTD__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Postgraduate loan YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__ST_to_UAP_pay1_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>ST to UAP pay1 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__ST_to_UAP_pay2_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>ST to UAP pay2 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__ST_to_UAP_pay_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>ST to UAP pay YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__ST_to_UEL_pay1_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Earnings above ST up to and include UEL for 2016/2017 YTD.</description>
        <label>ST to UEL pay1 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__ST_to_UEL_pay2_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Earnings above ST up to and include UEL for 2016/2017 YTD.</description>
        <label>ST to UEL pay2 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__ST_to_UEL_pay_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Earnings above ST up to and include UEL for 2016/2017 YTD.</description>
        <label>ST to UEL pay YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Statutory_adoption_pay_YTD__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Statutory adoption pay YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Statutory_maternity_pay_YTD__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Statutory maternity pay YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Statutory_parental_pay_YTD__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Statutory parental pay YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Statutory_paternity_pay_YTD__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Statutory paternity pay YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Student_loan_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Student loan YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Tax_paid_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current employment tax paid YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Tax_paid_YTD_on_setup__c</fullName>
        <description>Latest figure received from HMRC for prior employment
The Payroll start date section was used where XCD took over payroll, but has a bug whereby this information is not submitted on the FPS correctly, so should not be used - instead create a dummy Pay Summary</description>
        <formula>IF(
  AND(
    NOT(ISNULL(xcdhcm__Effective_date__c)),
    xcdhcm__Effective_date__c &gt;= BLANKVALUE(xcdhcm__Payroll_start_date__c, xcdhcm__Effective_date__c),
    xcdhcm__Effective_date__c &gt;= BLANKVALUE(xcdhcm__Leaving_date_on_P45__c, xcdhcm__Effective_date__c)),
  xcdhcm__P6_9_tax_paid_YTD__c,

IF(
  AND(
    NOT(ISNULL(xcdhcm__Payroll_start_date__c)),
    xcdhcm__Payroll_start_date__c &gt;= BLANKVALUE(xcdhcm__Leaving_date_on_P45__c, xcdhcm__Payroll_start_date__c),
    xcdhcm__Payroll_start_date__c &gt;= BLANKVALUE(xcdhcm__Effective_date__c, xcdhcm__Payroll_start_date__c)),
  xcdhcm__Payroll_setup_tax_paid_YTD__c,

IF(
  AND(
    NOT(ISNULL(xcdhcm__Leaving_date_on_P45__c)),
    xcdhcm__Leaving_date_on_P45__c &gt;= BLANKVALUE(xcdhcm__Effective_date__c, xcdhcm__Leaving_date_on_P45__c),
    xcdhcm__Leaving_date_on_P45__c &gt;= BLANKVALUE(xcdhcm__Payroll_start_date__c, xcdhcm__Leaving_date_on_P45__c)),
  xcdhcm__P45_tax_paid_YTD__c,

0)))</formula>
        <inlineHelpText>Received by the Employee before joining XCD Payroll</inlineHelpText>
        <label>Tax paid on setup YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Tax_payable_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax payable YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Tax_year__c</fullName>
        <label>Tax year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012/2013</fullName>
                </value>
                <value>
                    <fullName>2013/2014</fullName>
                </value>
                <value>
                    <fullName>2014/2015</fullName>
                </value>
                <value>
                    <fullName>2015/2016</fullName>
                </value>
                <value>
                    <fullName>2016/2017</fullName>
                </value>
                <value>
                    <fullName>2017/2018</fullName>
                </value>
                <value>
                    <fullName>2018/2019</fullName>
                </value>
                <value>
                    <fullName>2019/2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Taxable_pay_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current employment taxable pay YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Taxable_pay_YTD_on_setup__c</fullName>
        <description>Latest figure received from HMRC for prior employment
The Payroll start date section was used where XCD took over payroll, but has a bug whereby this information is not submitted on the FPS correctly, so should not be used - instead create a dummy Pay Summary</description>
        <formula>IF(
  AND(
    NOT(ISNULL(xcdhcm__Effective_date__c)),
    xcdhcm__Effective_date__c &gt;= BLANKVALUE(xcdhcm__Payroll_start_date__c, xcdhcm__Effective_date__c),
    xcdhcm__Effective_date__c &gt;= BLANKVALUE(xcdhcm__Leaving_date_on_P45__c, xcdhcm__Effective_date__c)),
  xcdhcm__P6_9_taxable_pay_YTD__c,

IF(
  AND(
    NOT(ISNULL(xcdhcm__Payroll_start_date__c)),
    xcdhcm__Payroll_start_date__c &gt;= BLANKVALUE(xcdhcm__Leaving_date_on_P45__c, xcdhcm__Payroll_start_date__c),
    xcdhcm__Payroll_start_date__c &gt;= BLANKVALUE(xcdhcm__Effective_date__c, xcdhcm__Payroll_start_date__c)),
  xcdhcm__Payroll_setup_taxable_pay_YTD__c,

IF(
  AND(
    NOT(ISNULL(xcdhcm__Leaving_date_on_P45__c)),
    xcdhcm__Leaving_date_on_P45__c &gt;= BLANKVALUE(xcdhcm__Effective_date__c, xcdhcm__Leaving_date_on_P45__c),
    xcdhcm__Leaving_date_on_P45__c &gt;= BLANKVALUE(xcdhcm__Payroll_start_date__c, xcdhcm__Leaving_date_on_P45__c)),
  xcdhcm__P45_taxable_pay_YTD__c,

0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Received by the Employee before joining XCD Payroll</inlineHelpText>
        <label>Taxable pay on setup YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Total_gross_pay_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total gross pay - YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Total_tax_paid_YTD__c</fullName>
        <formula>xcdhcm__Tax_paid_YTD_on_setup__c + xcdhcm__Tax_paid_YTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax paid YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Total_taxable_pay_YTD__c</fullName>
        <formula>xcdhcm__Taxable_pay_YTD_on_setup__c + xcdhcm__Taxable_pay_YTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taxable pay YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__UAP_to_UEL_pay1_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>UAP to UEL pay1 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__UAP_to_UEL_pay2_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>UAP to UEL pay2 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__UAP_to_UEL_pay_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>UAP to UEL pay YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__UST_pay1_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>UST pay1 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__UST_pay2_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>UST pay2 YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__UST_pay_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>UST pay YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__p60status__c</fullName>
        <description>P60 Form summary status</description>
        <label>p60status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__zPayroll_eligibility__c</fullName>
        <defaultValue>&quot;Secure&quot;</defaultValue>
        <label>zPayroll eligibility</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Pay Summary YTD</label>
    <nameField>
        <displayFormat>PYTD-{0000}</displayFormat>
        <label>Pay YTD</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pay Summary YTDs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>